bttns in html deleted

--- a/index.html
+++ b/index.html
@@ -53,35 +53,8 @@
         </div>
     </div>
 
-    <div id="divBttns">
-        <button id="bttn1" class="bttnLetters" onclick="useChar(this)" disabled>A</button>
-        <button id="bttn2" class="bttnLetters" onclick="useChar(this)" disabled>B</button>
-        <button id="bttn3" class="bttnLetters" onclick="useChar(this)" disabled>C</button>
-        <button id="bttn4" class="bttnLetters" onclick="useChar(this)" disabled>D</button>
-        <button id="bttn5" class="bttnLetters" onclick="useChar(this)" disabled>E</button>
-        <button id="bttn6" class="bttnLetters" onclick="useChar(this)" disabled>F</button>
-        <button id="bttn7" class="bttnLetters" onclick="useChar(this)" disabled>G</button>
-        <button id="bttn8" class="bttnLetters" onclick="useChar(this)" disabled>H</button>
-        <button id="bttn9" class="bttnLetters" onclick="useChar(this)" disabled>I</button>
-        <button id="bttn10" class="bttnLetters" onclick="useChar(this)" disabled>J</button>
-        <button id="bttn11" class="bttnLetters" onclick="useChar(this)" disabled>K</button>
-        <button id="bttn12" class="bttnLetters" onclick="useChar(this)" disabled>L</button>
-        <button id="bttn13" class="bttnLetters" onclick="useChar(this)" disabled>M</button>
-        <button id="bttn14" class="bttnLetters" onclick="useChar(this)" disabled>N</button>
-        <button id="bttn15" class="bttnLetters" onclick="useChar(this)" disabled>O</button>
-        <button id="bttn16" class="bttnLetters" onclick="useChar(this)" disabled>P</button>
-        <button id="bttn17" class="bttnLetters" onclick="useChar(this)" disabled>Q</button>
-        <button id="bttn18" class="bttnLetters" onclick="useChar(this)" disabled>R</button>
-        <button id="bttn19" class="bttnLetters" onclick="useChar(this)" disabled>S</button>
-        <button id="bttn20" class="bttnLetters" onclick="useChar(this)" disabled>T</button>
-        <button id="bttn21" class="bttnLetters" onclick="useChar(this)" disabled>U</button>
-        <button id="bttn22" class="bttnLetters" onclick="useChar(this)" disabled>V</button>
-        <button id="bttn23" class="bttnLetters" onclick="useChar(this)" disabled>W</button>
-        <button id="bttn24" class="bttnLetters" onclick="useChar(this)" disabled>X</button>
-        <button id="bttn25" class="bttnLetters" onclick="useChar(this)" disabled>Y</button>
-        <button id="bttn26" class="bttnLetters" onclick="useChar(this)" disabled>Z</button>
+    <div id="divBttns"></div>
 
-    </div>
 
     <script src="script/penjat.js"></script>
 </body>
